--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 *{
   padding: 0;
   margin: 5px;
-  background-color: rgb(243, 188, 224);
+  background-color:aqua
 }
 button{
   background-color: rgb(4, 32, 42);
