--- a/src/index.css
+++ b/src/index.css
@@ -3,18 +3,35 @@
   margin: 5px;
   /* background-color:aqua */
 }
-button{
-  background-color: brown;
+.delete{
+  background-color: Red;
+
   color: white;
-  width: 250px;
-  height: 50px;
+  width: 110px;
+  height: 35px;
   font-size: large;
   border-radius: 30px;
   cursor: pointer;
   font-weight: bold;
   
 }
+.update{
+  background-color: green;
+  display: inline-block;
+  color: white;
+  width: 110px;
+  height: 35px;
+  font-size: large;
+  border-radius: 30px;
+  cursor: pointer;
+  font-weight: bold;
+  /* margin-left: 30px; */
+}
 button:hover{
   background-color: blue;
   color: black;
+}
+
+.con{
+  width:16vw;
 }
